; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_malloc.c___resize.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_malloc.c___resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_8__*, i64)* @__resize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__resize(i32* %0, %struct.TYPE_8__* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* null, i32** %8, align 8
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %11 = icmp ne %struct.TYPE_8__* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %3
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i64, i64* %7, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %17, %12, %3
  store i32 0, i32* %4, align 4
  br label %64

21:                                               ; preds = %17
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %23 = call i64 @_io_malloc_sz(%struct.TYPE_8__* %22)
  store i64 %23, i64* %9, align 8
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %25 = call i64 @_io_malloc_off(%struct.TYPE_8__* %24)
  %26 = load i64, i64* %9, align 8
  %27 = icmp sgt i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %21
  store i32 0, i32* %4, align 4
  br label %64

29:                                               ; preds = %21
  %30 = load i64, i64* %7, align 8
  %31 = call i32* @malloc(i64 %30)
  store i32* %31, i32** %8, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = icmp ne i32* %32, null
  br i1 %33, label %35, label %34

34:                                               ; preds = %29
  store i32 -1, i32* %4, align 4
  br label %64

35:                                               ; preds = %29
  %36 = load i32*, i32** %8, align 8
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %38 = call i32 @_io_malloc_buf(%struct.TYPE_8__* %37)
  %39 = load i64, i64* %7, align 8
  %40 = load i64, i64* %9, align 8
  %41 = call i32 @R_MIN(i64 %39, i64 %40)
  %42 = call i32 @memcpy(i32* %36, i32 %38, i32 %41)
  %43 = load i64, i64* %7, align 8
  %44 = load i64, i64* %9, align 8
  %45 = icmp sgt i64 %43, %44
  br i1 %45, label %46, label %54

46:                                               ; preds = %35
  %47 = load i32*, i32** %8, align 8
  %48 = load i64, i64* %9, align 8
  %49 = getelementptr inbounds i32, i32* %47, i64 %48
  %50 = load i64, i64* %7, align 8
  %51 = load i64, i64* %9, align 8
  %52 = sub nsw i64 %50, %51
  %53 = call i32 @memset(i32* %49, i32 0, i64 %52)
  br label %54

54:                                               ; preds = %46, %35
  %55 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %56 = call i32 @_io_malloc_buf(%struct.TYPE_8__* %55)
  %57 = call i32 @free(i32 %56)
  %58 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %59 = load i32*, i32** %8, align 8
  %60 = call i32 @_io_malloc_set_buf(%struct.TYPE_8__* %58, i32* %59)
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %62 = load i64, i64* %7, align 8
  %63 = call i32 @_io_malloc_set_sz(%struct.TYPE_8__* %61, i64 %62)
  store i32 1, i32* %4, align 4
  br label %64

64:                                               ; preds = %54, %34, %28, %20
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

declare dso_local i64 @_io_malloc_sz(%struct.TYPE_8__*) #1

declare dso_local i64 @_io_malloc_off(%struct.TYPE_8__*) #1

declare dso_local i32* @malloc(i64) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1

declare dso_local i32 @_io_malloc_buf(%struct.TYPE_8__*) #1

declare dso_local i32 @R_MIN(i64, i64) #1

declare dso_local i32 @memset(i32*, i32, i64) #1

declare dso_local i32 @free(i32) #1

declare dso_local i32 @_io_malloc_set_buf(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @_io_malloc_set_sz(%struct.TYPE_8__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
